assets/css/styles.css
/* ... */
.game-round-number {
    margin: 0.4em
}

.contact-container {
    width: 50%;
    margin: 20px;
    margin-right: 12%;
    flex: 2;
    padding-bottom: 20px;
}

.input-container {
    display: flex;
    gap: 10px;
}

/* #contact-img-container {
    border: 1px solid red;
    max-width: 30%;
    height: 100vh;
    overflow: hidden;
    box-shadow: inset 10px 4px 12px 0px rgba(0, 0, 0, 0.25);
    z-index: -1;
    flex: 1;
    overflow-y: hidden;
} */

#contact-img-container {
    /* border: 1px solid red; */
    max-width: 30%;
    height: 100%;
    /* overflow: hidden; */
    box-shadow: inset 15px 0px 20px -15px rgba(0, 0, 0, 0.25);
    z-index: -1;
    flex: 1;
    /* overflow-y: hidden; */
    overflow-x: visible;
    overflow-y: clip;
}

#contact-img {
    /* position: absolute; */
    z-index: 0;
}

form {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.text-input {
    height: 45px;
    width: 100%;
    border-radius: 100px;
    border: none;
    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.18);
    padding-inline: 15px;
    font-size: 16px;
    font-family: var(--font-family-Body);
}

.text-input:focus-visible {
    outline: 1px solid var(--colour-primary-teal);
}

textarea.text-input {
    border-radius: 22.5px;
    padding: 15px;
    width: 100%;
    height: 200px;
    resize: none;
}

h1 {
    font-family: var(--font-family-header);
    color: var(--colour-primary-teal);
    font-size: 3em;
}

.contact-paragraph {
    font-family: var(--font-family-Body);
    font-size: 1em;
    color: #3b3b3b;
    margin: 25px 0;
    max-width: 80%;
}

#container-contact-page {
    width: var(--container-width);
    margin: auto;
    height: 100%;
    display: flex;
    align-items: center;
    /* position: relative; */
}

label {
    visibility:hidden;
    position: absolute;
    left: -99999px;
}

.hidden {
    display: none;
}

/* TABLET */
@media (max-width: 1024px) {
    /* nav {
        width: 45%;
    } */

    header {
        height: 65px;
    }

    main {
        height: calc(var(--unit-100vh) - 130px);
        /* MINUS HEADER + FOOTER HEIGHT */
    }

    footer {
        height: 65px;
    }

    #container-header {
        width: 90%;
    }

    #container-content {
        width: 90%;
    }

    #nav-logo {
        font-size: 2.3em;
    }

    .input-container {
        flex-direction: column;
    }

    h1 {
        font-size: 2.3em;
    }

    textarea.text-input {
        height: 120px;
    }

    .contact-container {
        width: 65%;
    }
}

@media (max-width: 768px) {

    /* nav {
        width: 55%;
    } */
    nav ul {
        font-size: 1.2em;
    }

    h1 {
        font-size: 2em;
    }

    textarea.text-input {
        height: 100px;
    }

    .contact-container {
        width: 70%;
    }

    .game-text-content-header {
        font-family: var(--font-family-header);
        font-size: 1.8em;
        color: var(--colour-primary-teal);
        margin: 0.3em;
    }
    
    
    .game-text-content-paragraph {
        font-family: var(--font-family-Body);
        font-size: 1em;
        width: 90%;
        /* margin: auto; */
    }

    .game-round-number {
        margin: 0.3em;
        font-size: 1em;
    }

    .game-play-button {
        width: min(80%, 350px);
        min-height: 2em;
        border-radius: 10px;
        background-image: linear-gradient(180deg, var(--colour-primary-teal-gradient));
        font-family: var(--font-family-header);
        font-size: 1em;
        color: var(--colour-white);
        margin: 0.5em;
        border: none;
    }
    
    .game-play-again-button {
        width: min(80%, 350px);
        min-height: 2em;
        border-radius: 10px;
        background-color: var(--colour-white);
        font-family: var(--font-family-header);
        font-size: 1em;
        color: var(--colour-primary-teal);
        margin: 0.5em;
        border: none;
    }
}
/* ... */

